--- a/index.html
+++ b/index.html
@@ -12338,7 +12338,7 @@ td {
                                 <!--<iframe
                                     src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
                                     width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
-                                <img src=""></img>
+                                <a href='https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk'></a><img src="assets/img/team/Participant Details form QR.png"></img><a></a>
                             </div>
         </div>
         </div>
@@ -12544,8 +12544,6 @@ td {
                             <div class="col-md-6">
                                 <h2 class="text-2xl text-white mb-4">Coordinators</h2>
                                 <p class="text-white">
-                                    Mr. Suklav Ghosh (+91-9678000387)<br>
-                                    Dr. Sampriti Soor (+91-6297669108)<br>
                                     Prof. Arijit Sur (+91-9678000387)<br>
                                 </p><br>
                                 <h2 class="text-2xl text-white mb-4">Venue</h2>
@@ -12560,13 +12558,13 @@ td {
                                 <h2 class="text-white KeynoteP">Questions?</h2>
                                 <form class="row" action="mailto:suklav@iiitg.ac.in
                                 " method="post" enctype="text/plain">
-                                    <input type="text" placeholder="Name"
+                                    <!--<input type="text" placeholder="Name"
                                         class=" col-md-12 inline-block w-full rounded-md py-2 px-4 mb-2" />
                                     <input type="email" placeholder="Email" class=" block w-full rounded-md py-2 px-4 mb-2" />
                                     <textarea placeholder="Message" rows="4"
-                                        class="block w-full rounded-md py-2 px-4 mb-2"></textarea>
+                                        class="block w-full rounded-md py-2 px-4 mb-2"></textarea>-->
                                     <button type="submit"
-                                        class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Send</button>
+                                        class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Mail us </button>
                                 </form>
                             </div>
                     </div>
