--- a/index.html
+++ b/index.html
@@ -12322,22 +12322,24 @@ td {
                                     <h4>Fee details</h4>
                                               <b>Participants (online/offline):</b> 2,000 INR <br>
                                               <b>Foreign/Industry Participants:</b> 10,000 INR <br>
+                                    <div style="height: 2rem;"></div>
                                     <h4>Bank Details</h4>
-                                            <b>Beneficiary Name:</b> IITG TIDF
-                                            <b>Bank Name:</b> Canara Bank
-                                            <b>Branch Name:</b> IIT Guwahati
-                                            <b>IFSC Code:</b> CNRB0008652
-                                            <b> Account Number:</b> 8652101030401
+                                            <b>Beneficiary Name:</b> IITG TIDF <br>
+                                            <b>Bank Name:</b> Canara Bank <br>
+                                            <b>Branch Name:</b> IIT Guwahati <br>
+                                            <b>IFSC Code:</b> CNRB0008652 <br>
+                                            <b> Account Number:</b> 8652101030401 <br>
                               </p>
                         </div>
                     </div>
-                            <div class="text-center-asli-wala">
-                                Please make the payment via the details given above and fill up the form<br>
-                                <!--<iframe
-                                    src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
-                                    width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
-                                <a href='https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk'></a><img src="assets/img/team/Participant Details form QR.png" width="100"></img><a></a>
-                            </div>
+                    <div style="height: 4rem;"></div>
+                    <div class="text-center-asli-wala">
+                        Please make the payment via the details given above and fill up the form<br>
+                        <!--<iframe
+                            src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
+                            width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
+                        <a href='https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk'><img src="assets/img/team/Participant Details form QR.png" width="100"></img></a>
+                    </div>
         </div>
         </div>
             <div style="height: 4rem;"></div>
