--- a/index.html
+++ b/index.html
@@ -12317,6 +12317,10 @@ td {
         <div class="intro flex flex-col align-middle text-center">
                     <h2 class="text-center-asli-wala">Registration</h2>
                     <div class="text-center-asli-wala">
+                        <table>
+                            <tr><th>Participants (online/offline):</th><td>2,000 INR</td></tr>
+                            <tr><th>Foreign/Industry Participants:</th><td>10,000 INR</td></tr>
+                        </table>
                         <div class="text-justify">
                               <p class="text-muted">
                                     <h4>Fee details</h4>
@@ -12338,12 +12342,12 @@ td {
                         <!--<iframe
                             src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
                             width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
-                        <a href='https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk'><img src="assets/img/team/Participant Details form QR.png" width="100"></img></a>
+                        <a href='https://forms.gle/Jne3KHLudcp6sShj7'><img src="assets/img/team/Participant Details form QR.png" width="100"></img></a>
                     </div>
         </div>
         </div>
-            <div style="height: 4rem;"></div>
         </div>
+            <div style="height: 4rem;"></div>
     </section>
 
 <section class="page-section bg-light" id="program">
