--- a/index.html
+++ b/index.html
@@ -12350,98 +12350,108 @@ td {
         <div class="container">
         <div class="team-grid KeyNotesContainer">
         <div class="intro flex flex-col align-middle text-center">
-            <table border="1" style="border-collapse: collapse; text-align: center;">
-  <tr>
-    <th>Time</th>
-    <th>9:00 - 10:00 AM</th>
-    <th>10:00 - 11:00 AM</th>
-    <th>11:00 - 11:30 AM (High Tea)</th>
-    <th>11:30 AM - 12:30 PM</th>
-    <th>12:30 - 1:30 PM</th>
-    <th>1:30 - 3:00 PM (Lunch)</th>
-    <th>3:00 - 5:00 PM</th>
-  </tr>
-  <tr>
-    <td>6th January (Monday)</td>
-    <td>Expert Lecture</td>
-    <td>Inauguration</td>
-    <td></td>
-    <td>ML Basics</td>
-    <td>ML Basics</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-  <tr>
-    <td>7th January (Tuesday)</td>
-    <td>Expert Lecture</td>
-    <td>DL Basics</td>
-    <td></td>
-    <td>CNN - I</td>
-    <td>CNN - II</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-  <tr>
-    <td>8th January (Wednesday)</td>
-    <td>Expert Lecture</td>
-    <td>Sequential Modelling - I</td>
-    <td></td>
-    <td>Sequential Modelling - II</td>
-    <td>Sequential Modelling - III</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-  <tr>
-    <td>9th January (Thursday)</td>
-    <td>Expert Lecture</td>
-    <td>DL for Vision - I</td>
-    <td></td>
-    <td>DL for Vision - II</td>
-    <td>DL for Vision - III</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-  <tr>
-    <td>10th January (Friday)</td>
-    <td>Expert Lecture</td>
-    <td>DL for NLP - I</td>
-    <td></td>
-    <td>DL for NLP - II</td>
-    <td>DL for NLP - III</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-  <tr>
-    <td>11th January (Saturday)</td>
-    <td>Expert Lecture</td>
-    <td>Generative AI - I</td>
-    <td></td>
-    <td>Generative AI - II</td>
-    <td>Generative AI - III</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-  <tr>
-    <td>12th January (Sunday)</td>
-    <td>Expert Lecture</td>
-    <td>DL for Network</td>
-    <td></td>
-    <td>DL for Vehicular Network</td>
-    <td>DL for Cyber Security</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-  <tr>
-    <td>13th January (Monday)</td>
-    <td>Expert Lecture</td>
-    <td>Explainable AI</td>
-    <td></td>
-    <td>Fairness in AI</td>
-    <td>DL Applications</td>
-    <td></td>
-    <td>Hands-on</td>
-  </tr>
-</table>
+            <div style="display: none;" id="responsiveTable">
+  <table border="1" style="border-collapse: collapse; text-align: center; width: 100%;">
+    <tr>
+      <th>Time</th>
+      <th>9:00 - 10:00 AM</th>
+      <th>10:00 - 11:00 AM</th>
+      <th style="writing-mode: vertical-rl; transform: rotate(180deg);">11:00 - 11:30 AM (High Tea)</th>
+      <th>11:30 AM - 12:30 PM</th>
+      <th>12:30 - 1:30 PM</th>
+      <th style="writing-mode: vertical-rl; transform: rotate(180deg);">1:30 - 3:00 PM (Lunch)</th>
+      <th>3:00 - 5:00 PM</th>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>6th January (Monday)</b></td>
+      <td>Expert Lecture</td>
+      <td style="background-color: lightgreen; font-weight: bold;">Inauguration</td>
+      <td></td>
+      <td>ML Basics</td>
+      <td>ML Basics</td>
+      <td></td>
+      <td>Hands-on</td>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>7th January (Tuesday)</b></td>
+      <td>Expert Lecture</td>
+      <td>DL Basics</td>
+      <td></td>
+      <td>CNN - I</td>
+      <td>CNN - II</td>
+      <td></td>
+      <td>Hands-on</td>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>8th January (Wednesday)</b></td>
+      <td>Expert Lecture</td>
+      <td>Sequential Modelling - I</td>
+      <td></td>
+      <td>Sequential Modelling - II</td>
+      <td>Sequential Modelling - III</td>
+      <td></td>
+      <td>Hands-on</td>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>9th January (Thursday)</b></td>
+      <td>Expert Lecture</td>
+      <td>DL for Vision - I</td>
+      <td></td>
+      <td>DL for Vision - II</td>
+      <td>DL for Vision - III</td>
+      <td></td>
+      <td>Hands-on</td>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>10th January (Friday)</b></td>
+      <td>Expert Lecture</td>
+      <td>DL for NLP - I</td>
+      <td></td>
+      <td>DL for NLP - II</td>
+      <td>DL for NLP - III</td>
+      <td></td>
+      <td>Hands-on</td>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>11th January (Saturday)</b></td>
+      <td>Expert Lecture</td>
+      <td>Generative AI - I</td>
+      <td></td>
+      <td>Generative AI - II</td>
+      <td>Generative AI - III</td>
+      <td></td>
+      <td>Hands-on</td>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>12th January (Sunday)</b></td>
+      <td>Expert Lecture</td>
+      <td>DL for Network</td>
+      <td></td>
+      <td>DL for Vehicular Network</td>
+      <td>DL for Cyber Security</td>
+      <td></td>
+      <td>Hands-on</td>
+    </tr>
+    <tr style="border-bottom: 1px solid black;">
+      <td><b>13th January (Monday)</b></td>
+      <td>Expert Lecture</td>
+      <td>Explainable AI</td>
+      <td></td>
+      <td>Fairness in AI</td>
+      <td>DL Applications</td>
+      <td></td>
+      <td style="color: orange; font-weight: bold;">Valedictory</td>
+    </tr>
+  </table>
+</div>
+
+<script>
+  // Script to show table only if screen width is greater than 800px
+  if (window.innerWidth > 800) {
+    document.getElementById("responsiveTable").style.display = "block";
+  }
+</script>
+
 
             <div class="text-center-asli-wala">
                 <h2 class="section-heading text-uppercase">Program Schedule</h2>
