--- a/index.html
+++ b/index.html
@@ -12361,26 +12361,26 @@ td {
                   <table style="border-collapse: collapse; text-align: center; width: 100%;">
                     <tr style="border-bottom: 1px solid black;">
                       <th></th>
-                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="9"></th>
                       <th>9:00 AM -<br>10:00 AM</th>
                       <th>10:00 AM -<br>11:00 AM</th>
-                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="6">11:00 AM - 11:30 AM (High Tea)</th>
+                      <th>11:00 AM - <br>11:30 AM</th>
                       <th>11:30 AM -<br>12:30 PM</th>
                       <th>12:30 PM -<br>1:30 PM</th>
-                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="6">1:30 PM - 3:00 PM (Lunch)</th>
+                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="9">1:30 PM - 3:00 PM (Lunch)</th>
                       <th>3:00 PM -<br>5:00 PM</th>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>6th January<br>(Monday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td style="color: lightgreen; font-weight: bold;">Inauguration</td>
+                      <th rowspan="8">High<br>Tea</th>
                       <td>ML Basics</td>
                       <td>ML Basics</td>
                       <td>Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>7th January<br>(Tuesday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td>DL Basics</td>
                       <td>CNN - I</td>
                       <td>CNN - II</td>
@@ -12388,7 +12388,7 @@ td {
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>8th January<br>(Wednesday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td>Sequential Modelling - I</td>
                       <td>Sequential Modelling - II</td>
                       <td>Sequential Modelling - III</td>
@@ -12396,7 +12396,7 @@ td {
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>9th January<br>(Thursday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td>DL for Vision - I</td>
                       <td>DL for Vision - II</td>
                       <td>DL for Vision - III</td>
@@ -12404,7 +12404,7 @@ td {
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>10th January<br>(Friday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td>DL for NLP - I</td>
                       <td>DL for NLP - II</td>
                       <td>DL for NLP - III</td>
@@ -12412,17 +12412,15 @@ td {
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>11th January<br>(Saturday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td>Generative AI - I</td>
-                        <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="3"></th>
                       <td>Generative AI - II</td>
                       <td>Generative AI - III</td>
-                        <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="3"></th>
                       <td>Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>12th January<br>(Sunday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td>DL for Network</td>
                       <td>DL for Vehicular Network</td>
                       <td>DL for Cyber Security</td>
@@ -12430,7 +12428,7 @@ td {
                     </tr>
                     <tr>
                       <td><b>13th January<br>(Monday)</b></td>
-                      <td>Expert Lecture</td>
+                      <td>Expert<br>Lecture</td>
                       <td>Explainable AI</td>
                       <td>Fairness in AI</td>
                       <td>DL Applications</td>
